# BaconEngineC

./: .gitignore  .gitmodules  CMakeLists.txt  Credits.txt  LICENSE  Makefile  Packet Example.txt  Packet Implementation.txt  README.md
assets/BaconEngine/Default/: en_us.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
documentation/: README.md  language.md  structure.md  thesaurus.md
documentation/BaconEngine/: Engine Layers.md
documentation/console/: create.md
include/BaconEngine/BaconEngine/: ArgumentManager.h  BinaryExport.h  ClientInformation.h  Configuration.h  DeltaTime.h  DllExport.h  EngineMemoryInformation.h  EntryPoint.h  Event.h  I18N.h  Package.h  SDLSupport.h
include/BaconEngine/BaconEngine/Client/: Information.h
include/BaconEngine/BaconEngine/Console/: ArgumentManager.h  Command.h  CommandArguments.h  Console.h
include/BaconEngine/BaconEngine/Debugging/: Assert.h  StrictMode.h
include/BaconEngine/BaconEngine/Input/: Keyboard.h  Mouse.h
include/BaconEngine/BaconEngine/Math/: Bitwise.h  Color.h  Vector.h
include/BaconEngine/BaconEngine/Networking/: Client.h
include/BaconEngine/BaconEngine/Rendering/: Layer.h  LayerStack.h  Renderer.h  UI.h  UIElement.h  UIElements.h  UIWindow.h  UIWindows.h  Window.h
include/BaconEngine/BaconEngine/SceneLogic/: ClientObject.h  Scene.h
include/BaconEngine/BaconEngine/Server/: Client.h  Packet.h  Packets.h  Server.h
include/BaconEngine/BaconEngine/Storage/: DefaultPackage.h  DynamicArray.h  DynamicDictionary.h  Package.h
include/Interface/Interface/: Engine.h  EntryPoint.h
include/SharedEngineCode/SharedEngineCode/: ANSI.h  ANSICodes.h  ArgumentHandler.h  BuiltInArguments.h  EngineMemory.h  Launcher.h  Logger.h  MessageBox.h  OSUser.h  OperatingSystem.h  Paths.h  String.h  StringExtension.h  Threads.h  User.h
include/SharedEngineCode/SharedEngineCode/Debugging/: Assert.h  StrictMode.h
include/SharedEngineCode/SharedEngineCode/Hacks/: Windows.h
include/SharedEngineCode/SharedEngineCode/Internal/: Boolean.h  CPlusPlusSupport.h  CppHeader.h  CppSupport.h  OperatingSystem.h  PlatformSpecific.h
include/SharedEngineCode/SharedEngineCode/Storage/: DynamicArray.h  DynamicDictionary.h
source/BaconEditor/: CMakeLists.txt  Entry.c
source/BaconEngine/: AntiClientGuard.h  ArgumentManager.c  BaconEngineClient.cmake  BaconEngineClientStandalone.cmake  CMakeLists.txt  ClientInformation.c  Configuration.c  DeltaTime.c  DummyClient.h  EngineMemory.c  EngineMemory.h  EntryPoint.c  Event.c  I18N.c  InterfaceFunctions.h  Package.c  PrivateArgumentManager.h  PrivateDeltaTime.h
source/BaconEngine/Client/: Information.c
source/BaconEngine/Console/: ArgumentManager.c  Console.c  EngineCommands.c  EngineCommands.h  PrivateConsole.h
source/BaconEngine/Debugging/: Assert.c  StrictMode.c
source/BaconEngine/Input/: Keyboard.c  Mouse.c
source/BaconEngine/Networking/: Client.c
source/BaconEngine/Platform/: SpecificPlatformFunctions.c  SpecificPlatformFunctions.h
source/BaconEngine/Platform/Metal/: Metal.c  Metal.h  MetalWindow.h  MetalWindow.m
source/BaconEngine/Platform/OpenGL/: OpenGL.c  OpenGL.h  OpenGLInput.c  OpenGLInput.h  OpenGLRenderer.c  OpenGLRenderer.h  OpenGLWindow.c  OpenGLWindow.h
source/BaconEngine/Platform/TextMode/: TextMode.c  TextMode.h  TextModeWindow.c  TextModeWindow.h
source/BaconEngine/Platform/Windows/: Windows.c  Windows.h  WindowsRenderer.c  WindowsRenderer.h  WindowsWindow.c  WindowsWindow.h
source/BaconEngine/Rendering/: EngineLayers.c  EngineLayers.h  EngineUIs.c  EngineUIs.h  Layer.c  LayerStack.c  PrivateLayer.h  PrivateRenderer.h  PrivateUI.h  PrivateWindow.h  Renderer.c  SpecificRendererFunctions.c  SpecificRendererFunctions.h  UI.c  UIElement.c  UIElements.c  UIWindow.c  UIWindows.c  Window.c
source/BaconEngine/Rendering/OpenGL/: OpenGL.c  OpenGL.h  OpenGLRenderer.c  OpenGLRenderer.h  OpenGLWindow.c  OpenGLWindow.h
source/BaconEngine/Rendering/TextMode/: TextMode.c  TextMode.h  TextModeWindow.c  TextModeWindow.h
source/BaconEngine/SceneLogic/: Scene.c
source/BaconEngine/Server/: Client.c  EnginePackets.c  EnginePackets.h  Packet.c  Packets.c  PrivateClient.h  PrivatePacket.h  PrivateServer.h  Server.c
source/BaconEngine/Storage/: DefaultPackage.c  DynamicArray.c  DynamicDictionary.c  Package.c  PrivateDefaultPackage.h  PrivateDynamicArray.c  PrivateDynamicArray.h  PrivateDynamicDictionary.c  PrivateDynamicDictionary.h
source/BaconEngine/Threads/: BaseThread.h  ClientThread.c  ClientThread.h  CommandThread.c  CommandThread.h  ServerThread.c  ServerThread.h
source/BaconEngineLauncher/: CMakeLists.txt  Main.c
source/BaconLauncher/: BaconLauncherWindows.cmake  CMakeLists.txt  Main.c
source/BaconLauncherUI/: CMakeLists.txt  Entry.c
source/Interface/: CMakeLists.txt  EntryPoint.c  InterfaceStandalone.cmake
source/SharedEngineCode/: ANSI.c  ArgumentHandler.c  CMakeLists.txt  EngineMemory.c  Launcher.c  Logger.c  MessageBox.c  OSUser.c  Paths.c  SharedEngineCodeStandalone.cmake  String.c  StringExtension.c  Threads.c  User.c
source/SharedEngineCode/Debugging/: Assert.c  StrictMode.c
source/SharedEngineCode/Hacks/: Windows.c
source/SharedEngineCode/Storage/: DynamicArray.c  DynamicDictionary.c
source/TestGame/: CMakeLists.txt  Entry.c  Layers.c  Layers.h
test/CustomStandaloneClientBinary/: CMakeLists.txt  Entry.c
test/DummyLauncher/: CMakeLists.txt  Main.c
test/StandaloneClientBinary/: CMakeLists.txt  Entry.c
test/TestClientCPP/: CMakeLists.txt  Entry.cpp
test/TestGame/: CMakeLists.txt  Entry.c  Layers.c  Layers.h  Test.window.xml
